<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Yamba PDM</string>
    <string name="titleYamba">Yamba PDM</string>
    <string name="titleStatus">Status Update</string>
    <string name="hintText">Please enter your status...</string>
    <string name="buttonUpdate">Submit</string>
    <string name="buttonBusy">Updating</string>
    
    <!-- Preference -->
    <string name="preferenceUsernameSummary">Your username in the service.</string>
    <string name="preferenceUsernameName">Username</string>
    <string name="preferencePasswordSummary">The username\'s password.</string>
    <string name="preferencePasswordName">Password</string>
    <string name="preferenceServiceUriSummary">The location of the service.</string>
    <string name="preferenceServiceUriName">Service URI</string>
    <string name="preferenceTimelineEntriesSummary">The max number of entries shown in the timeline.</string>
    <string name="preferenceTimelineEntriesName">Max Shown Entries</string>
    <string name="preferenceStatusCharactersSummary">The maximum size of a status.</string>
    <string name="preferenceStatusCharactersName">Status Maximum Size</string>
    <string name="preferenceTimelineRefreshSummary">The refresh interval on the timeline, in milliseconds.</string>
    <string name="preferenceTimelineRefreshName">Timeline Refresh Rate</string>
    <string name="preferenceAutoTimelineRefreshSummary">Controls the timeline automatic refresh.</string>
    <string name="preferenceAutoTimelineRefreshName">Timeline Auto Refresh</string>
    <string name="preferenceServiceCategory">Service</string>
    <string name="preferenceApplicationCategory">Application</string>
    
    <!-- Menu -->    
    <string name="create_status">New Status</string>
    <string name="timeline">Timeline</string>
    <string name="refresh_timeline">Refresh</string>
    <string name="settings">Settings</string>
    <string name="show_user_info">User Info</string>
    
    
    <!-- Timeline -->
    <string name="timelineLoading">Loading status...</string>
    
    <!-- Details -->
    <string name="detailsTitle">Details</string>
    <string name="dateFormat">MM-dd-yyyy HH:mm:ss</string>
    
    <!-- Error -->
    <string name="errorTitle">Error</string>
    <string name="errorMessage">This is awkward.. An error has occurred!</string>
    <string name="badCredentials">There was an error logging in, please verify your credentials.</string>
    <string name="invalidApi">Couldn\'t connect to the API, please verify the URI.</string>
    
    <!--  UserInfo -->
    <string name="userInfoTitle">User Info</string>
    <string name="userInfoNameLabel">Name</string>
    <string name="userInfoDefaultName"> </string>
    <string name="userInfoStatusLabel">Status</string>
    <string name="userInfoDefaultStatus">0</string>
    <string name="userInfoSubscriptionsLabel">Subscriptions</string>
    <string name="userInfoDefaultSubscriptions">0</string>
    <string name="userInfoSubscribersLabel">Subscribers</string>
    <string name="userInfoDefaultSubscribers">0</string>
    
    <!--  Email -->
    <string name="emailChooserLabel">Choose an Email client :</string>
    
</resources>